fix(web-components): add flex-wrap CSS styling to interaction controls slot in ic-card
This is a fix for the bug where contents in the interation controls slot could overflow the card
container. Padding between each button has also been fixed so it matches the designs.

. #529

--- a/packages/web-components/src/components/ic-card/ic-card.css
+++ b/packages/web-components/src/components/ic-card/ic-card.css
@@ -131,10 +131,19 @@ button {
   justify-content: center;
 }
 
-.interaction-controls {
+.interaction-area {
+  display: flex;
+  gap: var(--ic-space-md);
   margin-top: var(--ic-space-md);
+  align-items: flex-end;
+}
+
+.interaction-controls {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+  gap: var(--ic-space-sm);
+  flex-grow: 0;
 }
 
 .toggle-button {
